--- a/explore.html
+++ b/explore.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Explore.html">Explore</a>
+              <a class="nav-link active" aria-current="page" href="3xplore.html">Explore</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="news.html">News and Events</a>
@@ -41,7 +41,7 @@
                 Act
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Act.html">Take Action</a></li>
+                <li><a class="dropdown-item" href="act.html">Take Action</a></li>
                 <li><a class="dropdown-item" href="act2.html">Get Involved</a></li>
               </ul>
               <li class="nav-item">
