--- a/explore.html
+++ b/explore.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="explore.html">Explore</a>
+              <a class="nav-link" href="explore.html">Explore</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="news.html">News and Events</a>
